# term-data-table

./: Cargo.toml  LICENSE
examples/: derive.rs  elegant.rs  serde.rs  simple.rs
src/: cell.rs  lib.rs  row.rs  ser.rs  style.rs  table_cell.rs
term-data-table-derive/: Cargo.toml
term-data-table-derive/src/: lib.rs
