[package]
name = "term-data-table"
version = "0.2.3"
authors = ["Ryan Bluth <ryanbluth93@gmail.com>", "Richard Dodd <richard.o.dodd@gmail.com>"]
description = "Tables to render data in CLI apps"
license = "MIT"
repository = "https://github.com/derekdreery/term-data-table"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["table", "cli", "terminal"]
edition = "2021"
include = ["src", "Cargo.toml", "LICENSE"]

[dependencies]
lazy_static = "1"
regex = "1"
unicode-width = "0.1"
term-data-table-derive = { version = "0.1.0", path = "term-data-table-derive" }
unicode-linebreak = "0.1.2"
itertools = "0.10.3"
terminal_size = "0.1.17"
serde = "1.0.137"
anyhow = "1.0.58"
serde_json = "1.0.82"

[dev-dependencies]
pretty_assertions = "0.6.1"
serde = { version = "1.0.137", features = ["derive"] }

[workspace]
members = [".", "term-data-table-derive"]
