[package]
name = "term-data-table-derive"
description = "Derive macros for `term-data-table`"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/drerekdreery/term-data-table"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.20"
syn = "1.0.98"
proc-macro2 = "1.0.40"
